Fix sticky header spacing on small screens

--- a/client/extensions/woocommerce/app/settings/shipping/shipping-zone/style.scss
+++ b/client/extensions/woocommerce/app/settings/shipping/shipping-zone/style.scss
@@ -1,6 +1,8 @@
 .sticky-panel + .shipping-zone__locations-container,
 .sticky-panel + .shipping-zone__methods-container {
-	margin-top: 58px;
+	@include breakpoint( ">660px" ) {
+		margin-top: 58px;
+	}
 }
 
 .shipping-zone__name {
